fix: proper spacing on the  social left nav

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -413,8 +413,12 @@ _:-ms-fullscreen, :root .main
 .side-nav-section
   margin-bottom: 10px
 
-  &.pages-nav
+  &.pages-nav,
+  &.social-nav
     margin-top: 40px
+
+  &.social-nav
+    margin-left: -10px
 
 .category-nav-title
   background: $button-background-color
